# speckle-blender

./: .gitignore  README.md  build_installer.cmd  export_dependencies.sh  local_build_modules.sh  patch_installer.py  patch_version.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: pr.yml  release.yml
bpy_speckle/: __init__.py  blender_commit_object_builder.py  blender_manifest.toml  clients.py  functions.py  install_dependencies.py  installer.py  speckle_blender_addon.code-workspace  speckle_state.py  util.py
bpy_speckle/bindings/: account_binding.py  send_binding.py
bpy_speckle/callbacks/: __init__.py  draw_speckle_info.py  on_mesh_edit.py
bpy_speckle/connector/: __init__.py
bpy_speckle/connector/blender_operators/: __init__.py  add_account_button.py  add_project_by_url.py  create_model.py  create_project.py  load_button.py  load_latest_button.py  model_card_load_button.py  model_card_publish_button.py  model_card_settings.py  publish_button.py  (+1 more)
bpy_speckle/convert/: __init__.py  constants.py  to_native.py  to_speckle.py  util.py
bpy_speckle/converter/: __init__.py  to_native.py  utils.py
bpy_speckle/operators/: __init__.py  commit.py  load.py  misc.py  model_card_settings.py  object.py  publish.py  streams.py  users.py
bpy_speckle/properties/: __init__.py  addon.py  collection.py  object.py  scene.py
bpy_speckle/specklepy_extras/: commit_object_builder.py  traversal.py
bpy_speckle/states/: speckle_state.py
bpy_speckle/ui/: __init__.py  icons.py  main_panel.py  model_card.py  model_selection_dialog.py  mouse_position_mixin.py  object.py  project_selection_dialog.py  selection_dialog.py  selection_filter_dialog.py  version_selection_dialog.py  view3d.py
bpy_speckle/utils/: account_manager.py  get_ascendants.py  misc.py  model_manager.py  project_manager.py  version_manager.py
(+45 files in other folders)
