[project]
name = "speckle-blender"
version = "3.0.0"
description = "Next-Gen Speckle connector for Blender!"
requires-python = ">=3.11.9, <4.0.0"
license = "Apache-2.0"
dependencies = [
    "specklepy>=3.0.1",
]

[dependency-groups]
dev = [
    "fake-bpy-module-latest>=20240524,<20240525",
    "ruff>=0.4.4,<0.5",
]

